# cdda-dear-diary

./: CHANGELOG.md  Makefile  README.md  cabal.project  cabal.project.freeze  flake.nix  fourmolu.yaml
.github/workflows/: ci.yml  exe.yml
cdda-dear-diary/: LICENSE  README.md  cdda-dear-diary.cabal
cdda-dear-diary-aeson/: CHANGELOG.md  README.md  cdda-dear-diary-aeson.cabal
cdda-dear-diary-aeson/src/CddaDearDiary/: Aeson.hs
cdda-dear-diary-cli/: cdda-dear-diary-cli.cabal
cdda-dear-diary-cli/app/: Main.hs
cdda-dear-diary/src/: CddaDearDiary.hs
cdda-dear-diary/src/CddaDearDiary/: Internal.hs  Types.hs
cdda-dear-diary/src/CddaDearDiary/Internal/Parser/: Body.hs  Entry.hs  Single.hs
cdda-dear-diary/test/: Expectations.hs  Spec.hs
cdda-dear-diary/test/diaries/: Diary1.diary  Diary1.golden  Diary2.diary  Diary2.golden  Diary3.diary  Diary3.golden
examples/json/: Diary.json
