cabal-version:       3.0
name:                cdda-dear-diary-cli
version:             0.1.0
synopsis:            CLI app for cdda-dear-diary
description:
    CLI app for cdda-dear-diary
    See README.md for more details.
license:             BSD-3-Clause
author:              cloudyluna
maintainer:          cloudyluna
copyright:           2024 cloudyluna
category:            Data
build-type:          Simple
tested-with:         GHC == 9.6.6

common common-options
  build-depends:       base ^>= 4.18.2.1,
                       cdda-dear-diary,
                       cdda-dear-diary-aeson,
                       aeson,
                       aeson-pretty,
                       text,
                       optparse-applicative,

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
                       DataKinds
                       DuplicateRecordFields
                       ImportQualifiedPost
                       NoFieldSelectors
                       OverloadedLabels

executable cdd-cli
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
